--- a/investment/runner.html
+++ b/investment/runner.html
@@ -14,10 +14,15 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/InvestmentSpec.js"></script>
-  <script type="text/javascript" src="spec/BuiltMatcher.js"></script>
+  <script type="text/javascript" src="spec/toBeMatcher.js"></script>
   <script type="text/javascript" src="spec/toBeTruthyFalsy.js"></script>
   <script type="text/javascript" src="spec/toBeUndefinedNullBeNaN.js"></script>
   <script type="text/javascript" src="spec/toBeDefined.js"></script>
+  <script type="text/javascript" src="spec/toContain.js"></script>
+  <script type="text/javascript" src="spec/toMatch.js"></script>
+  <script type="text/javascript" src="spec/toBeLessThanTobeGreaterThan.js"></script>
+  <script type="text/javascript" src="spec/toBeCloseTo.js"></script>
+  <script type="text/javascript" src="spec/toThrow.js"></script>
 </head>
 
 <body>
