--- a/investment/investment-view.html
+++ b/investment/investment-view.html
@@ -8,10 +8,6 @@
         <script type="text/javascript" src="lib/jasmine-core/jasmine.js"></script>
         <script type="text/javascript" src="lib/jasmine-core/jasmine-html.js"></script>
         <script type="text/javascript" src="lib/jasmine-core/boot/boot.js"></script>
-
-        <script type="text/javascript" src="spec/NewInvestmentView.js"></script>
-        <!-- include spec files here... -->
-        <script type="text/javascript" src="spec/NewInvestmentViewSpec.js"></script>
     </head>
 
     <body>
@@ -33,8 +29,16 @@
                 <input type="number" class="new-investment-share-price"
                 name="sharePrice" value="0">
                 </label>
-                <input type="submit" name="add" value="Add">
+                <input type="submit" name="add" value="Add" class="submit-investment">
             </form>
+
+            <div id="investmentListView">
+
+            </div>
         </div>
     </body>
+    <script type="text/javascript" src="spec/NewInvestmentView.js"></script>
+    <!-- include spec files here... -->
+    <script type="text/javascript" src="spec/SpecHelper.js"></script>
+    <script type="text/javascript" src="spec/NewInvestmentViewSpec.js"></script>
 </html>
