--- a/investment/runner.html
+++ b/investment/runner.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="src/Stock.js"></script>
   <script type="text/javascript" src="src/Investment.js"></script>
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
+  <script type="text/javascript" src="spec/SpecHelperExample.js"></script>
   <script type="text/javascript" src="spec/InvestmentSpec.js"></script>
   <script type="text/javascript" src="spec/toBeMatcher.js"></script>
   <script type="text/javascript" src="spec/toBeTruthyFalsy.js"></script>
